Fix right float alignment

--- a/scss/modules/field.scss
+++ b/scss/modules/field.scss
@@ -104,5 +104,9 @@
     .field--name-field-address {
       margin-bottom: 5rem;
     }
+
+    .field--name-field-description::after {
+      content: unset;
+    }
   }
 }
